link alignment fixed

--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -374,8 +374,8 @@ html {
 .header-logo a {
 	display: var(--header-logo-link-display);
 	position: var(--header-logo-link-position);
-	vertical-align: var(--header-logo-link-top);
-	align-content: var(--header-logo-link-left);
+	top: var(--header-logo-link-top);
+	left: var(--header-logo-link-left);
 }
 body {color: var(--text-color);
 	font-family: var(--font-family-base);
